--- a/Assignment1/style2.css
+++ b/Assignment1/style2.css
@@ -2,13 +2,13 @@ body {
     background-image: url("http://c8.alamy.com/comp/EB51Y1/veladoras-votive-candles-in-mexican-church-EB51Y1.jpg");
     background-repeat:no-repeat;
     background-size:cover;
-    background-attachment: fixed;
-    font-family: sans-serif;
+    background-attachment:fixed;
+    font-family:sans-serif;
 }
 
 .main {
     margin-top: -10px;
-    background-color: white;
+    background-color: pink;
 }
 /* Header section */
 header {
@@ -62,38 +62,8 @@ article {
     height: 300px;
     padding-top: 100px;
 }
-/* style for play now button in hero section */
-#play {
-    padding-top: 250px;
-}
-/* h2 elements in #_column section */
-h2 {
-    margin-bottom: 10px;
-    color: orange;
-    text-align: center;
-    font-weight: bold;
-    text-shadow: 2px 2px black;
-}
-/* p tag in 3_column section */
-p {
-    text-align: justify;
-    margin-top: 10px;
-}
-.vid{
-    margin-bottom: 30px;
-}
-/* h2 tag in video section */
-.vid h2 {
-    margin-top: 20px;
-    text-align: center;
-    font-weight: bold;
-    color: orange;
-}
-/* style for video section */
-#video {
-    padding-top: 30px;
-    padding-left: 120px;
-}
+
+
 /* h2 tag in 3_column section */
 .3_col h2 {
   
@@ -107,33 +77,7 @@ p {
 h3 {
     margin-top: 7px;
 }
-/* style properties for signup section */
-.signup {
-    margin-top: 20px;
-    background-image: url("https://s-media-cache-ak0.pinimg.com/originals/e5/97/17/e59717909650f7a71c02087c259c6a00.gif");
-    background-size: 940px 400px;
-    background-attachment: background;
-    background-repeat: no-repeat;
-    height: 400px;
-    color: white;
-}
-/* h2 tag in signup section */
-.signup h2 {
-    margin-top: 10px;
-    text-align: center;
-}
-/* signup button in signup section */
-#signup {
-    margin-left: 400px;
-    margin-top: 60px;
-}
-/* paragraph in signup section */
-#para {
-    padding-left: 15px;
-    padding-right: 15px;
-    text-align: justify;
-    line-height: 30px;
-}
+
 /* footer section */
 footer {
     margin-top: 10px;
