--- a/Assignment1/style2.css
+++ b/Assignment1/style2.css
@@ -17,11 +17,11 @@ header {
     width: 100%;
     margin: 0px;
     position: fixed;
-    padding-top: -10px;
+    padding-top: 10px;
 }
 /* h1 tag in header */
 header h1 {
-    margin-top: 20px;
+    margin-top: 30px;
     color: Orange;
     font-size: 2em;
     padding-bottom: 10px;
@@ -30,17 +30,24 @@ header h1 {
 ul {
     list-style-type: none;
     margin: 0;
+
 }
 /* list in nav tag */
 nav ul li {
     float: left;
     padding-top: 30px;
+    list-style-type: none;
+
 }
 /* anchor tag in list */
 li a {
-    color: white;
+    color: orange;
     text-decoration: none;
-    padding-right: 30px;
+    padding-right: 10px;
+    font-size: 1.5em;
+    list-style-type: none;
+    
+
 }
 
 a:hover {
@@ -51,8 +58,9 @@ a {
     text-decoration: none;
 }
 .prop{
-    padding-top:100px;
-    padding-bottom: 10px;
+    padding-top:70px;
+    padding-bottom: 40px;
+    text-align: center;
 }
 /* style for hero section */
 article {
@@ -62,16 +70,29 @@ article {
     height: 300px;
     padding-top: 100px;
 }
-
+.gr{
+    padding-top:10px;
+    padding-bottom: 10px;
+}
 
 /* h2 tag in 3_column section */
-.3_col h2 {
+
+.fir{
   
     text-align: center;
     font-weight: bold;
     color: orange;
-    padding-top: 10px;
-    padding-bottom: 20px;
+    background-repeat: no-repeat;
+    padding-top: -20px;
+    padding-bottom: 150px;
+}
+.sec{
+  
+    text-align: center;
+    font-weight: bold;
+    color: orange;
+    padding-top: -10px;
+    padding-bottom: 10px;
 }
 /* style for all h3 tags */
 h3 {
@@ -84,12 +105,23 @@ footer {
     height: 60px;
     background-color: #ab5a08;
     margin-bottom: 5px;
+    font-size:1.3em;
 }
 /* styles for social buttons in footer section */
 .social{
     padding-top: 20px;
     padding-left: 100px;
 	color: white;
+}
+.term{
+    font-size: 1.2em;
+    padding-right: 10px;
+    padding-top:20px;
+}
+.copy{
+    font-size: 1.2em;
+    padding-right: 10px;
+    padding-top:20px;
 }
 
 
