--- a/Assignment1/style2.css
+++ b/Assignment1/style2.css
@@ -21,10 +21,11 @@ header {
 }
 /* h1 tag in header */
 header h1 {
-    margin-top: 30px;
-    color: Orange;
-    font-size: 2em;
-    padding-bottom: 10px;
+    margin-top: 20px;
+    color: black;
+    font-size: 2.3em;
+    padding-bottom: 20px;
+    text-decoration-style: wavy;
 }
 /* un-ordered list in header element */
 ul {
@@ -61,8 +62,17 @@ a {
     padding-top:70px;
     padding-bottom: 40px;
     text-align: center;
-
+  }
+h2{
+   color:black;
 }
+.grid_6 p{
+    color: black;
+    text-align:justify-all;
+    font-size: 18px;
+}
+
+
 /* style for hero section */
 
 .hero-unit
